# lc-mcp-server

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_AND_SECURITY_ANALYSIS.md  AUTHENTICATION.md  BUGFIX_SUMMARY.md  CODEBASE_EXPLORATION_SUMMARY.md  CONTAINER.md  DROP_IN_REPLACEMENT_GAP_ANALYSIS.md  Dockerfile  FIXES_APPLIED.md  GAP_ANALYSIS.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MULTI_PROVIDER_IMPLEMENTATION.md  Makefile  OAUTH_2FA_IMPLEMENTATION.md  OAUTH_MCP_GUIDE.md  OAUTH_SETUP.md  OAUTH_TESTING_GUIDE.md  PHASE1_COMPLETION_SUMMARY.md  PHASE2_COMPLETION_SUMMARY.md  PHASE3_COMPLETION_SUMMARY.md  PHASE4_HTTP_AND_TOOLS_COMPLETION.md  PROFILES.md  PR_DESCRIPTION.md  PYTHON_SDK_EXPLORATION.md  QUICK_REFERENCE.md  README.md  REFACTORING_PROGRESS.md  SECURITY_FIXES.md  SECURITY_FIX_OID_INHERITANCE.md  TODO_MISSING_FEATURES.md  audit_decorator.py  audit_logger.py  claude-code-config-example.json  claude-code-config.json  claude-desktop-config.json  cloudbuild-deploy.yaml  (+41 more)
cmd/server/: main.go
configs/: profiles.yaml
internal/auth/: auth_test.go  context.go  jwt_exchange.go  jwt_parser.go  jwt_parser_test.go  logger_adapter.go  permission_cache.go  permission_cache_test.go  sdk_cache.go  sdk_cache_test.go  validator.go
internal/config/: config.go  config_test.go  logging.go
prompts/: gen_det_summary.txt  gen_dr_detect.txt  gen_dr_respond.txt  gen_event_list.txt  gen_extract_event_list.txt  gen_lcql.txt  gen_platform.txt  gen_playbook.txt  gen_sensor_selector.txt
templates/: mfa_challenge.html  oauth_error.html  select_provider.html
(+164 files in other folders)
