[tool.poetry]
name = "limacharlie-mcp-server"
version = "0.1.0"
description = "LimaCharlie Model Context Protocol (MCP) server for AI agents"
authors = ["LimaCharlie <info@limacharlie.io>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://limacharlie.io"
repository = "https://github.com/refractionPOINT/lc-mcp-server"
keywords = ["limacharlie", "mcp", "security", "edr", "ai", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
packages = [{include = "server.py"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.32.1"
starlette = "^0.41.3"
limacharlie = "^4.9.0"
fastapi = "^0.115.5"
google-genai = "^1.0.0"
openai = "^1.57.0"
google-cloud-storage = "^2.18.2"
mcp = {git = "https://github.com/modelcontextprotocol/python-sdk.git"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mcp-server = "server:main"
